--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# folder for saving results
+# ignore folder for saving results
 /vacancies
 
 # ingnore logging file
 parser.log
+
+# ingnore cache folder
+/__pycache__
